crates/cosh-sdk/src/term_screen/escape_parser/parser/snapshots/cosh_sdk__term_screen__escape_parser__parser__test__osc_bel_parse_first_as_vec.snap
---
source: crates/cosh-sdk/src/term_screen/escape_parser/parser/mod.rs
expression: actions
---
[
    OperatingSystemCommand(
        SetHyperlink(
            Some(
                Hyperlink {
                    params: {},
                    uri: "http://example.com",
                    implicit: false,
                },
            ),
        ),
    ),
    Print(
        'e',
    ),
    Print(
        'x',
    ),
    Print(
        'a',
    ),
    Print(
        'm',
    ),
    Print(
        'p',
    ),
    Print(
        'l',
    ),
    Print(
        'e',
    ),
    OperatingSystemCommand(
        SetHyperlink(
            None,
        ),
    ),
]
